--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "ts-node": "ts-node",
     "multiply": "ts-node multiplier.ts",
-    "calculate": "ts-node calculator.ts"
+    "calculate": "ts-node calculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,12 @@
   "homepage": "https://github.com/muzammilmunir/typescript#readme",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
   }
 }
