--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "multiply": "ts-node multiplier.ts",
     "calculate": "ts-node calculator.ts",
     "start": "ts-node index.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,15 @@
   "homepage": "https://github.com/muzammilmunir/typescript#readme",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@stylistic/eslint-plugin": "^5.7.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.6",
+    "eslint": "^9.39.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.0"
   },
   "dependencies": {
     "express": "^5.2.1"
